Fixed visted footer links turning invisible

--- a/style.css
+++ b/style.css
@@ -115,3 +115,6 @@ body {
     margin-top: 50px;
     text-align: center;
   }
+  a, a:visited {
+    color: inherit;
+}
